compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__pipe_update_subject.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "pub type Thing {\n  Thing(a: Int, b: Int)\n}\n\npub fn identity(x) { x }\n\npub fn foo() {\n  let thing = Thing(1, 2)\n  Thing(..thing |> identity, b: 1000)\n}"
---
module rec my.``mod``

type Thing = { a: int64; b: int64 }
let identity (x: 'u8) = begin
    x
end
let foo () = begin
    let thing = { a = 1L; b = 2L }
    { (begin
        let _pipe = thing
        (identity _pipe)
    end) with b = 1000L }
end
