compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_access_block.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "pub type Thing {\n  Thing(a: Int, b: Int)\n}\n\npub fn foo() {\n  {\n    let thing = Thing(1, 2)\n    thing\n  }.a\n}"
---
module rec my.``mod``
type Thing = { a: int64; b: int64 }
let foo () = begin
    begin
        let thing = { a = 1L; b = 2L }
        thing
    end.a
end
