compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_accessor_multiple_variants_positions_other_than_first.snap
---
source: compiler-core/src/fsharp/tests/records.rs
assertion_line: 60
expression: "\npub type Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
module rec my.``mod``
type Person =
| Student of name: string * age: int
| Teacher of name: string * age: int * title: string
    member this.age = 
        match this with
        | Person.Student (_, age) -> age
        | Person.Teacher (_, age, _) -> age
    member this.name = 
        match this with
        | Person.Student (name, _) -> name
        | Person.Teacher (name, _, _) -> name
let get_name (person: Person): string = begin
    person.name
end
let get_age (person: Person): int = begin
    person.age
end
