compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_spread1.snap
---
source: compiler-core/src/fsharp/tests/records.rs
assertion_line: 122
expression: "\ntype Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  let Triple(b: the_b, ..) = triple\n  the_b\n}\n"
---
module rec my.``mod``
type private Triple = { a: int; b: int; c: int }
let private main (): int = begin
    let triple = { a = 1; b = 2; c = 3 }
    let { b = the_b } = triple
    the_b
end
