compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_updates1.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\npub type Person { Person(name: String, age: Int) }\n\nfn foo() {\n    let p = Person(\"Quinn\", 27)\n    let new_p = Person(..p, age: p.age + 1)\n    new_p\n}\n"
---
module rec my.``mod``
#nowarn "25" // Incomplete pattern matches on this expression.

type Person = { name: string; age: int64 }
let private foo () = begin
    let p = { name = "Quinn"; age = 27L }
    let new_p = { p with age = p.age + 1L }
    new_p
end
