compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_updates2.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\npub type Person { Person(name: String, age: Int) }\n\nfn foo() {\n    let p = Person(\"Quinn\", 27)\n    let new_p = Person(..p, age: 28, name: \"Riley\")\n    new_p\n}\n"
---
module rec my.``mod``
type Person = { name: string; age: int }
let private foo () = begin
    let p = { name = "Quinn"; age = 27 }
    let new_p = { p with age = 28; name = "Riley" }
    new_p
end
