compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_updates3.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\npub type Person { Person(name: String, age: Int) }\n\nfn foo() {\n    let new_p = Person(..return_person(), age: 28)\n    new_p\n}\n\nfn return_person() {\n    Person(\"Quinn\", 27)\n}\n"
---
module rec my.``mod``

type Person = { name: string; age: int64 }
let private return_person () = begin
    { name = "Quinn"; age = 27L }
end
let private foo () = begin
    let new_p = { return_person() with age = 28L }
    new_p
end
