compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__simple_record.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "pub type Person { Person(name: String, age: Int) }"
---
module rec my.``mod``
type Person = { name: string; age: int64 }
